tags scrollbar fix

--- a/app/less/content.less
+++ b/app/less/content.less
@@ -336,6 +336,7 @@ body.standalone {
 .payments-new-tags {
     float: left;
     width: 100%;
+    margin-bottom: -14px;
 
     overflow-x: auto;
     overflow-y: hidden;
@@ -351,6 +352,7 @@ body.standalone {
             margin: 0;
             margin-right: 4px;
             padding: 4px 8px;
+            margin-bottom: 10px;
 
             border: 1px solid #5bcac1;
 
